--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "firebase": "^4.1.3",
-    "material-ui": "^0.18.3",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "semantic-ui-react": "^0.70.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
