--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "firebase": "^4.1.3",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
+    "react-datetime": "^2.8.10",
     "react-dom": "^15.6.1",
     "semantic-ui-react": "^0.70.0"
   },
